Bug 162246 - Empty comments vanish after save/reload; Reappear after a new Insert -> comment
Summary: Empty comments vanish after save/reload; Reappear after a new Insert -> comment
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: ImpressDraw-Comments
  Show dependency treegraph
 
Reported: 2024-07-29 12:36 UTC by Telesto
Modified: 2025-09-30 09:50 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2024-07-29 12:36:40 UTC
Description:
Empty comments vanish after save/reload; Reappear after a new Insert -> comment

Steps to Reproduce:
1. Open Draw
2. Insert -> Comment 3x
3. Save the file
4. File -> Reload (no comments)
5. Insert -> Comment -> previous 4 comments reappear

Actual Results:
Empty comment not visible. Reappear after Insert -> Comment

Expected Results:
Empty comment should be shown


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 46f7dcc5f499892ef093147b3f739c258bbf6b81
CPU threads: 4; OS: Windows 8.1 X86_64 (6.3 build 9600); UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 Telesto 2024-07-29 12:52:12 UTC
Fine with
Version: 7.6.3.0.0+ (X86_64) / LibreOffice Community
Build ID: 35f19e5cb93ce218787904e99c2bedfd40e725cc
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 2 Buovjaga 2024-08-21 16:27:27 UTC
Bibisected with linux-64-25.2 to 6289ad39e851c709111b582e4390a097b30e2cae
annot: clone annotations in SdrObjects when the page is duplicated
Comment 3 Commit Notification 2025-01-07 04:45:11 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/481e230e834c903e7ec0f045c20039910ad894ed

tdf#162246 use main ViewShell when synching the annotations

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2025-01-07 11:09:10 UTC
Verified, thanks.

Arch Linux 64-bit
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 410653b9f654a0a265fffbb79c0bac0205b52278
CPU threads: 8; OS: Linux 6.12; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 7 January 2025
Comment 5 Commit Notification 2025-01-07 11:10:01 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/3d3af64f315203d36940d82f54a39e51aff8c8b3

tdf#162246 use main ViewShell when synching the annotations

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Sprunki Mod 2025-03-05 07:45:27 UTC Comment hidden (spam)
Comment 7 sandrawelker 2025-09-30 09:50:23 UTC Comment hidden (spam)