tdf#162246 use main ViewShell when synching the annotations

Current ViewShell is not always available, but we use the main
ViewShell most of the time anyway in AnnotationManager, so use
that when annotation synching. Use only the current ViewShell
when opening the annotation pop-up window.

Change-Id: Ibbc8e0859d0b91617577148e76e8293cb8015941
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179849
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
Tested-by: Jenkins